# novel

./: .gitignore  Cargo.toml  README.md  README.zh.md  _todos.md  novel.toml  sapid.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: check.rs  clean.rs  dev.rs  init.rs  main.rs  new_page.rs
crates/core/: Cargo.toml
crates/core/assets/: main.js  style.css
crates/core/src/: build_summary.rs  builder.rs  cache.rs  content.rs  data.rs  error.rs  fs_retry.rs  lib.rs  pagination.rs  plugin.rs  post_process.rs  route.rs  routing.rs  search.rs  serve.rs  sidebar.rs  source.rs  taxonomy.rs  template.rs  typst_processor.rs  util.rs
crates/core/src/assets/: images.rs  mod.rs  sass.rs
crates/core/src/markdown/: container.rs  file_embed.rs  highlight.rs  mod.rs  parser.rs
crates/core/src/plugins/: code_group.rs  feed.rs  llms_txt.rs  markdown_mirror.rs  mod.rs  pwa.rs  redirects.rs  robots.rs  search_index.rs  sitemap.rs
crates/core/src/template/: handlebars_engine.rs  minijinja_engine.rs  mod.rs  tera_engine.rs
crates/core/templates/: 404.html  base.html  blog.html  doc.html  home.html  list.html  page.html  terms.html
crates/core/templates_hbs/: 404.html  _footer.html  _head.html  _navbar.html  blog.html  doc.html  home.html  page.html
crates/core/templates_tera/: 404.html  base.html  doc.html  home.html  page.html
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  kdl_conv.rs  lib.rs  types.rs
docs/: index.md
docs/data/: authors.toml
docs/en/: index.md
docs/en/guide/: _meta.json  configuration.md  feedback.md  file-embed.md  frontmatter.md  general-ssg.md  getting-started.md  index.md  llms.md  markdown.md  offline.md  routing.md  search.md  theming.md  versioning.md
docs/en/posts/: hello-world.md
docs/guide/: _meta.json  configuration.md  deploy.md  file-embed.md  frontmatter.md  getting-started.md  home-page.md  library.md  markdown.md  routing.md  search.md  static-assets.md  theming.md
docs/posts/: _collection.toml  hello-world.md  second-post.md  third-post.md
docs/zh/: index.md
docs/zh/guide/: _meta.json  configuration.md  deploy.md  feedback.md  file-embed.md  frontmatter.md  general-ssg.md  getting-started.md  home-page.md  index.md  library.md  llms.md  markdown.md  offline.md  routing.md  search.md  static-assets.md  theming.md  versioning.md
docs/zh/posts/: hello-world.md  second-post.md  third-post.md
examples/intro-novel/: Cargo.toml
examples/intro-novel/src/: main.rs
scripts/: install.ps1  install.sh
