[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Markdown
pulldown-cmark = { version = "0.13", features = ["simd"] }
gray_matter = "0.3"

# Syntax highlighting
syntect = "5"

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# File system
walkdir = "2"
notify = "8"
globset = "0.4"

# Web server
salvo = { version = "0.77", features = ["serve-static", "sse"] }

# Templating
minijinja = { version = "2", features = ["loader"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Embedding
rust-embed = "8"

# Utilities
anyhow = "1"
thiserror = "2"
rayon = "1"
slug = "0.1"
regex = "1"
once_cell = "1"
