[package]
name = "novel-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "novel"
path = "src/main.rs"

[dependencies]
novel-shared = { path = "../shared" }
novel-core = { path = "../core" }
clap = { workspace = true }
tokio = { workspace = true }
salvo = { workspace = true }
tokio-stream = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
